<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/yellow">


    <TextView
        android:id="@+id/tv_winner"
        android:textSize="28sp"
        android:text="@string/txt_game_winner"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_play_again"
        android:text="@string/txt_play_again"
        android:layout_marginBottom="16dp"
        android:background="@color/cardview_dark_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_menu"
        android:text="@string/txt_back_to_menu"
        android:background="@color/cardview_dark_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>